--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -170,7 +170,7 @@
     {{#if show_footer}}
       <footer class="footer">
         <div class="container">
-          <p class="text-muted">{{__ "Powered by"}} <a href="http://openkb.mrvautin.com/" target="_blank">openKB</a></p>
+		<p class="text-muted text-center">{{__ "Powered by"}} <a href={{config.settings.owner-site}} target="_blank">{{config.settings.owner}} </a></p>
         </div>
       </footer>
     {{/if}}
