--- a/public/themes/twitter/views/kb.hbs
+++ b/public/themes/twitter/views/kb.hbs
@@ -10,7 +10,7 @@
             <div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 search_bar">
         {{/if}}
 			<div class="input-group">
-				<input type="text" name="frm_search" id="frm_search" class="form-control input-lg" placeholder="search">
+				<input type="text" name="frm_search" id="frm_search" class="form-control input-lg" placeholder="{{__ "Search the knowledge base"}}">
 				<span class="input-group-btn">
 					<button class="btn btn-default btn-lg" id="btn_search" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
 				</span>
